--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "resend": "^2.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
