--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "seed": "node ./prisma/seed.js"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "helmet": "^7.1.0",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.6",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
@@ -33,7 +34,11 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.8",
     "apidoc": "^1.2.0",
+    "nodemon": "^3.0.2",
     "prisma": "^5.7.1",
     "swagger-ui-express": "^5.0.0"
   }
