--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "seed": "node ./prisma/seed.js"
+    "seed": "node ./prisma/seed.js",
+    "lint": "eslint .  --ext .js",
+    "lint-fix": "eslint --fix .  --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -31,15 +33,20 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "resend": "^2.1.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.8",
     "apidoc": "^1.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.2",
-    "prisma": "^5.7.1",
-    "swagger-ui-express": "^5.0.0"
+    "prisma": "^5.7.1"
   }
 }
