--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "node --exec babel-node src/index.js",
+    "dev": "nodemon --exec babel-node src/index.js",
     "seed": "node ./prisma/seed.js",
     "lint": "eslint .  --ext .js",
     "lint-fix": "eslint --fix .  --ext .js"
