--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node --exec babel-node src/index.js",
+    "start": "babel-node src/index.js — out-file index-compiled.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "seed": "node ./prisma/seed.js",
     "lint": "eslint .  --ext .js",
