--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mateto-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "babel-node src/index.js — out-file index-compiled.js",
+    "start": "node dist/index.js",
+    "build": "babel src --out-dir dist",
     "dev": "nodemon --exec babel-node src/index.js",
     "seed": "node ./prisma/seed.js",
     "lint": "eslint .  --ext .js",
@@ -34,10 +35,11 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "resend": "^2.1.0",
-    "winston": "^3.11.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.8",
