--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mateto-api",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "build": "babel src --out-dir dist",
