--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "resend": "^2.1.0",
